[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overleaf-sync"
version = "2.6.1"
description = "A two-way sync CLI for local folders and Overleaf projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "GaryOAO" }
]
dependencies = [
  "beautifulsoup4>=4.12",
  "click>=8.1",
  "playwright>=1.51",
  "requests>=2.31",
  "socketIO-client-nexus>=0.7.6",
  "websocket-client>=1.8",
]

[project.optional-dependencies]
login = [
  "PySide6>=6.7",
]

[project.scripts]
overleaf-sync = "overleaf_sync.cli:main"
ovs = "overleaf_sync.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["overleaf_sync*"]
